# rap_framework_plugins

./: .gitignore  CLAUDE.md  README.md  config.json  devonthink_importer.applescript  main.py  pyproject.toml  rapt_import_script.applescript
config/: .env.example  config.json  config.schema.json
docs/: 000_python_file_watcher_pipeline.md  001_sha1_duplicate_detection.md  002_command_script_type.md  003_multi_folder_watch_support.md  004_folder_based_script_filtering.md  005_global_exclude_paths.md  006_sha256_hash_migration.md  007_manual_trigger_watchers.md
scripts/: devonthink_importer.applescript  devonthink_importer.scpt
src/rap_importer/: cli.py  config.py  executor.py  logging_config.py  main.py  menubar.py
src/rap_importer_plugin/: __init__.py  cli.py  config.py  executor.py  logging_config.py  main.py  menubar.py  notifications.py  paths.py  pipeline.py  simulate.py  watcher.py
tests/: __init__.py  test_cli.py  test_config.py  test_executor.py  test_paths.py  test_pipeline.py  test_schema.py  test_simulate.py  test_watcher.py
