[project]
name = "rap-importer-plugin"
version = "0.1.0"
description = "File watcher with configurable pipeline for DEVONthink imports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=3.0.0",
    "rumps>=0.4.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
rap-importer = "rap_importer_plugin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rap_importer_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
